data/derived/comb/progs/unify/prog8678.ml.out
Characters 99-113:
  | h::t -> if!(List.mem h t) then h::rest in (
               ^^^^^^^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         'a ref
